hello-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-service
  namespace: helloworld
spec:
  replicas: 1
  selector:
    matchLabels:
      bb: web
  template:
    metadata:
      labels:
        bb: web
        app: hello-world
        run: world-service
    spec:
      containers:
      - name: helloservice
        image: cloud.canister.io:5000/ktogias/helloworld:hello-0.1.0
      imagePullSecrets:
      - name: registry-canisterio

---

apiVersion: v1
kind: Service
metadata:
  name: hello-service
  namespace: helloworld
spec:
  selector:
    run: world-service
  ports:
  - name: http 
    port: 80
    targetPort: 80
