hello-world-api-gateway.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: helloworld-api-gateway
  namespace: helloworld
spec:
  replicas: 1
  selector:
    matchLabels:
      bb: web
  template:
    metadata:
      labels:
        bb: web
        app: hello-world
        run: api-gateway
    spec:
      containers:
      - name: apigateway
        image: cloud.canister.io:5000/ktogias/helloworld:helloworldapigateway-0.1.1
      imagePullSecrets:
      - name: registry-canisterio
      
---

apiVersion: v1
kind: Service
metadata:
  name: api-gateway
spec:
  selector:
    run: api-gateway
  ports:
  - name: http 
    port: 80
    targetPort: 80
