hello-world-api-gateway-istio.yaml

apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: hwapi-ms-ktogias-gr-gateway
spec:
  selector:
    istio: ingressgateway # use Istio default gateway implementation
  servers:
  - port:
      number: 443
      name: https
      protocol: HTTPS
    tls:
      mode: SIMPLE
      credentialName: hwapi-ms-ktogias-gr-credential-staging
      # privateKey: sds
      # serverCertificate: sds
    hosts:
    - "hwapi.ms.ktogias.gr"
    
---

apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: hwapi-ms-ktogias-gr
spec:
  hosts:
  - "hwapi.ms.ktogias.gr"
  gateways:
  - hwapi-ms-ktogias-gr-gateway
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        port:
          number: 80
        host: api-gateway
