hello-world-ui-istio.yaml

apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: hw-ms-ktogias-gr-gateway
spec:
  selector:
    istio: ingressgateway # use Istio default gateway implementation
  servers:
  - port:
      number: 443
      name: https
      protocol: HTTPS
    tls:
      mode: SIMPLE
      credentialName: hw-ms-ktogias-gr-credential-staging
      # privateKey: sds
      # serverCertificate: sds
    hosts:
    - "hw.ms.ktogias.gr"
    
---

apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: hw-ms-ktogias-gr
spec:
  hosts:
  - "hw.ms.ktogias.gr"
  gateways:
  - hw-ms-ktogias-gr-gateway
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        port:
          number: 80
        host: helloworld-ui
